// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TicketMessage component should add a -sent via a campaign- label with a link because the message was sent by a campaign 1`] = `
<div
  className="ticket-message component internal"
>
  <div
    className="avatar"
  >
    <Avatar
      email=""
      google={false}
      name=""
      size="36"
      style={Object {}}
      url=""
    />
  </div>
  <div
    className="body"
  >
    <div
      className="header"
    >
      <div
        className="headerDetails"
      >
        <div
          className="author"
        >
          <CustomerLabel
            customer={
              Immutable.Map {
              }
            }
          />
        </div>
        <div>
          <span
            className="clickable source"
            onClick={[Function]}
          >
            <SourceIcon
              className="uncolored"
              id="info-undefined"
              type=""
            />
          </span>
          <Popover
            delay={
              Object {
                "hide": 0,
                "show": 0,
              }
            }
            hideArrow={false}
            isOpen={false}
            placement="bottom"
            placementPrefix="bs-popover"
            target="info-undefined"
            toggle={[Function]}
          >
            <PopoverBody
              tag="div"
            >
              <div
                className="sourceDetails"
              >
                <ul>
                  <li>
                    <span
                      className="text-faded"
                    >
                      From
                      :
                    </span>
                    <strong />
                  </li>
                  <li>
                    <span
                      className="text-faded"
                    >
                      Send via:
                    </span>
                    <strong />
                  </li>
                  <li>
                    <span
                      className="text-faded"
                    >
                      Date:
                    </span>
                    <strong>
                      <DatetimeLabel
                        labelFormat="MM-DD-YYYY HH:mm"
                      />
                    </strong>
                  </li>
                </ul>
              </div>
            </PopoverBody>
          </Popover>
        </div>
        <span
          className="from d-none d-md-inline-block"
          key="via-widget"
        >
          sent via
           a  
          <b>
            <Link
              onlyActiveOnIndex={false}
              style={Object {}}
              tag="a"
              to="/app/settings/integrations/smooch_inside/118/campaigns/123"
            >
              <i
                className="material-icons mr-1"
              >
                settings
              </i>
              Campaign
            </Link>
          </b>
        </span>
      </div>
      <span
        className="date text-faded float-right"
      >
        <DatetimeLabel />
      </span>
    </div>
    <TicketMessageBody
      className="messageContent"
      message={
        Object {
          "integration_id": "118",
          "meta": Object {
            "campaign_id": "123",
          },
        }
      }
    />
    <TicketMessageActions
      message={
        Object {
          "integration_id": "118",
          "meta": Object {
            "campaign_id": "123",
          },
        }
      }
    />
  </div>
</div>
`;

exports[`TicketMessage component should add a -sent via a rule- label with a link because the message was sent by a rule 1`] = `
<div
  className="ticket-message component internal"
>
  <div
    className="avatar"
  >
    <Avatar
      email=""
      google={false}
      name=""
      size="36"
      style={Object {}}
      url=""
    />
  </div>
  <div
    className="body"
  >
    <div
      className="header"
    >
      <div
        className="headerDetails"
      >
        <div
          className="author"
        >
          <CustomerLabel
            customer={
              Immutable.Map {
              }
            }
          />
        </div>
        <div>
          <span
            className="clickable source"
            onClick={[Function]}
          >
            <SourceIcon
              className="uncolored"
              id="info-undefined"
              type=""
            />
          </span>
          <Popover
            delay={
              Object {
                "hide": 0,
                "show": 0,
              }
            }
            hideArrow={false}
            isOpen={false}
            placement="bottom"
            placementPrefix="bs-popover"
            target="info-undefined"
            toggle={[Function]}
          >
            <PopoverBody
              tag="div"
            >
              <div
                className="sourceDetails"
              >
                <ul>
                  <li>
                    <span
                      className="text-faded"
                    >
                      From
                      :
                    </span>
                    <strong />
                  </li>
                  <li>
                    <span
                      className="text-faded"
                    >
                      Send via:
                    </span>
                    <strong />
                  </li>
                  <li>
                    <span
                      className="text-faded"
                    >
                      Date:
                    </span>
                    <strong>
                      <DatetimeLabel
                        labelFormat="MM-DD-YYYY HH:mm"
                      />
                    </strong>
                  </li>
                </ul>
              </div>
            </PopoverBody>
          </Popover>
        </div>
        <span
          className="from d-none d-md-inline-block"
          key="via-widget"
        >
          sent via
           a  
          <b>
            <Link
              onlyActiveOnIndex={false}
              style={Object {}}
              tag="a"
              to="/app/settings/rules?ruleId=4"
            >
              <i
                className="material-icons mr-1"
              >
                settings
              </i>
              Rule
            </Link>
          </b>
        </span>
      </div>
      <span
        className="date text-faded float-right"
      >
        <DatetimeLabel />
      </span>
    </div>
    <TicketMessageBody
      className="messageContent"
      message={
        Object {
          "rule_id": 4,
          "via": "rule",
        }
      }
    />
    <TicketMessageActions
      message={
        Object {
          "rule_id": 4,
          "via": "rule",
        }
      }
    />
  </div>
</div>
`;

exports[`TicketMessage component should add a -sent via email- label with no link because the message is an internal note sent via email 1`] = `
<div
  className="ticket-message component internal"
>
  <div
    className="avatar"
  >
    <Avatar
      email=""
      google={false}
      name=""
      size="36"
      style={Object {}}
      url=""
    />
  </div>
  <div
    className="body"
  >
    <div
      className="header"
    >
      <div
        className="headerDetails"
      >
        <div
          className="author"
        >
          <CustomerLabel
            customer={
              Immutable.Map {
              }
            }
          />
        </div>
        <div>
          <span
            className="clickable source"
            onClick={[Function]}
          >
            <SourceIcon
              className="uncolored"
              id="info-undefined"
              type="internal-note"
            />
          </span>
          <Popover
            delay={
              Object {
                "hide": 0,
                "show": 0,
              }
            }
            hideArrow={false}
            isOpen={false}
            placement="bottom"
            placementPrefix="bs-popover"
            target="info-undefined"
            toggle={[Function]}
          >
            <PopoverBody
              tag="div"
            >
              <div
                className="sourceDetails"
              >
                <ul>
                  <li>
                    <span
                      className="text-faded"
                    >
                      From
                      :
                    </span>
                    <strong />
                  </li>
                  <li>
                    <span
                      className="text-faded"
                    >
                      Send via:
                    </span>
                    <strong>
                      internal-note
                    </strong>
                  </li>
                  <li>
                    <span
                      className="text-faded"
                    >
                      Date:
                    </span>
                    <strong>
                      <DatetimeLabel
                        labelFormat="MM-DD-YYYY HH:mm"
                      />
                    </strong>
                  </li>
                </ul>
              </div>
            </PopoverBody>
          </Popover>
        </div>
        <span
          className="from d-none d-md-inline-block"
        >
          sent via
           
          email
        </span>
      </div>
      <span
        className="date text-faded float-right"
      >
        <DatetimeLabel />
      </span>
    </div>
    <TicketMessageBody
      className="messageContent"
      message={
        Object {
          "source": Object {
            "type": "internal-note",
          },
          "via": "email",
        }
      }
    />
    <TicketMessageActions
      message={
        Object {
          "source": Object {
            "type": "internal-note",
          },
          "via": "email",
        }
      }
    />
  </div>
</div>
`;
